python/testData/inspections/pyLazyImportInspection/insideExcept.py
try:
    pass
except ImportError:
    <error descr="lazy imports must appear at module level">lazy</error> import os
